feat: 分析项目并编写ReadMe
Co-authored-by: traeagent <traeagent@users.noreply.github.com>